completed integration of student dashboard and student notification pages
